fix button collapse in deposits page

--- a/src/themes/default/styles/component.btn.css
+++ b/src/themes/default/styles/component.btn.css
@@ -146,7 +146,7 @@
 	}
 
 	&--secondary {
-		display: flex;
+		display: inline-flex;
 		justify-content: center;
 		background: $color-text;
 		color: $white;
